k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-demo
spec:
  selector:
    app: session-demo
  ports:
    - port: 80
      targetPort: 80
